--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,16 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".NavActivity"
             android:label="@string/title_activity_nav" >
+        </activity>
+        <activity
+            android:name=".Operation_workflow"
+            android:label="@string/title_activity_operation_workflow" >
         </activity>
     </application>
 
