--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,19 +4,16 @@
 
     <application
         android:allowBackup="true"
-
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".BaseActivity"
@@ -26,7 +23,10 @@
             android:name=".Operation_workflow"
             android:label="@string/title_activity_operation_workflow" >
         </activity>
+        <activity
+            android:name=".start_workflow"
+            android:label="@string/title_activity_start_workflow" >
+        </activity>
     </application>
-
 
 </manifest>
