With proper gameboard

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:name=".start_workflow"
             android:label="@string/title_activity_start_workflow" >
         </activity>
-	<activity>    
+	<activity
 	    android:name=".DetailGameBoardActivity"
             android:label="@string/title_activity_detail" >
         </activity>
